src/test/ui/suggestions/imm-ref-trait-object.stderr
error: the `min` method cannot be invoked on a trait object
  --> $DIR/imm-ref-trait-object.rs:2:8
   |
LL |      t.min().unwrap()
   |        ^^^
   |
   = note: you need `&mut dyn std::iter::Iterator<Item = &u64>` instead of `&dyn std::iter::Iterator<Item = &u64>`

error: aborting due to previous error

